--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#生产环境，开发环境，测试环境切换  dev/produce/test
-spring.profiles.active=produce
+#生产环境，开发环境，测试环境切换  dev/prod/test
+spring.profiles.active=prod
 
 #返回页面日期时，格式化
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
